1.5.0

 * Removed totem