@@ -1,4 +1,0 @@
-Makefile
-Makefile.in
-mediaprofiles.c
-
