@@ -1,152 +1,0 @@
-;; -*- scheme -*-
-; object definitions ...
-(define-object Profile
-  (in-module "GMAudio")
-  (parent "GObject")
-  (c-name "GMAudioProfile")
-  (gtype-id "GM_AUDIO_TYPE_PROFILE")
-)
-
-;; Enumerations and flags ...
-
-
-;; From /home/kikidonk/cvs/mate/mate-media/profiles/mate-media-profiles.h
-
-(define-function mate_media_profiles_init
-  (c-name "mate_media_profiles_init")
-  (return-type "none")
-  (parameters
-    '("MateConfClient*" "conf")
-  )
-)
-
-
-
-;; From /home/kikidonk/cvs/mate/mate-media/profiles/audio-profile.h
-
-(define-function gm_audio_profile_get_type
-  (c-name "gm_audio_profile_get_type")
-  (return-type "GType")
-)
-
-(define-method get_id
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_id")
-  (return-type "const-char*")
-)
-
-(define-method get_name
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_name")
-  (return-type "const-char*")
-)
-
-(define-method get_description
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_description")
-  (return-type "const-char*")
-)
-
-(define-method get_pipeline
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_pipeline")
-  (return-type "const-char*")
-)
-
-(define-method get_extension
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_extension")
-  (return-type "const-char*")
-)
-
-(define-method get_active
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_get_active")
-  (return-type "gboolean")
-)
-
-(define-function get_active_list
-  (c-name "gm_audio_profile_get_active_list")
-  (return-type "GList*")
-)
-
-(define-function lookup
-  (c-name "gm_audio_profile_lookup")
-  (return-type "GMAudioProfile*")
-  (parameters
-    '("const-char*" "id")
-  )
-)
-
-(define-method set_name
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_set_name")
-  (return-type "none")
-  (parameters
-    '("const-char*" "name")
-  )
-)
-
-(define-method set_description
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_set_description")
-  (return-type "none")
-  (parameters
-    '("const-char*" "name")
-  )
-)
-
-(define-method set_pipeline
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_set_pipeline")
-  (return-type "none")
-  (parameters
-    '("const-char*" "name")
-  )
-)
-
-(define-method set_extension
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_set_extension")
-  (return-type "none")
-  (parameters
-    '("const-char*" "name")
-  )
-)
-
-(define-method set_active
-  (of-object "GMAudioProfile")
-  (c-name "gm_audio_profile_set_active")
-  (return-type "none")
-  (parameters
-    '("gboolean" "active")
-  )
-)
-
-
-
-;; From /home/kikidonk/cvs/mate/mate-media/profiles/audio-profile-choose.h
-
-(define-function chooser_combo
-  (c-name "gm_audio_profile_choose_new")
-  (return-type "GtkWidget*")
-)
-
-(define-function chooser_combo_get_profile
-  (c-name "gm_audio_profile_choose_get_active")
-  (return-type "GMAudioProfile*")
-  (parameters
-    '("GtkWidget*" "choose")
-  )
-)
-
-(define-function chooser_combo_set_profile
-  (c-name "gm_audio_profile_choose_set_active")
-  (return-type "gboolean")
-  (parameters
-    '("GtkWidget*" "choose")
-    '("const-char*" "id")
-  )
-)
-
-
