@@ -1,3 +1,4 @@
 1.5.0
 
  * Removed totem
+ * Removed mediaprofiles
